fixed gap in chrome

--- a/view/css/register.css
+++ b/view/css/register.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: 30% 65%;
     grid-column-gap: 5%;
-    grid-row-gap: 10%;
+    grid-row-gap: 10px;
     width: 60%;
     margin: 0 auto;
 }
